<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.greatcairo.tourguide.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:gravity="center"
            android:textSize="22dp"
            android:textAppearance="?android:textAppearanceMedium"/>
    </LinearLayout>
    <Button
        android:id="@+id/mosque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mosque" />
    <Button
        android:id="@+id/hotels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hotels" />
    <Button
        android:id="@+id/restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant" />
    <Button
        android:id="@+id/museum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/museum" />
</LinearLayout>